--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://shekharsingh1987.github.io/yoga-with-sarya/'
 languageCode = 'en-us'
 theme = "nightfall"
 
